update with 60 changes

--- a/note/afplay.html
+++ b/note/afplay.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,7 +70,7 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbc8db16">사용법</a></li>
+<li><a href="#org65ae182">사용법</a></li>
 </ul>
 </div>
 </div>
@@ -79,9 +80,9 @@ afplay는 Audio File Play의 약자로
 오디오 파일 플레이어 유틸리티다.
 </p>
 
-<div id="outline-container-orgbc8db16" class="outline-2">
-<h2 id="orgbc8db16">사용법</h2>
-<div class="outline-text-2" id="text-orgbc8db16">
+<div id="outline-container-org65ae182" class="outline-2">
+<h2 id="org65ae182">사용법</h2>
+<div class="outline-text-2" id="text-org65ae182">
 <div class="org-src-container">
 <pre class="src src-bash">afplay /foo/bar/audio.mp3
 </pre>
