--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,11 +70,11 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org9e99734">사용법</a>
+<li><a href="#org96b7174">사용법</a>
 <ul>
-<li><a href="#org851feef">무제한 잠자기 방지</a></li>
-<li><a href="#org4ab98a4">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org8f0c9c4">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org936b66f">무제한 잠자기 방지</a></li>
+<li><a href="#orgcd49773">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org3585806">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -84,13 +85,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org9e99734" class="outline-2">
-<h2 id="org9e99734">사용법</h2>
-<div class="outline-text-2" id="text-org9e99734">
+<div id="outline-container-org96b7174" class="outline-2">
+<h2 id="org96b7174">사용법</h2>
+<div class="outline-text-2" id="text-org96b7174">
 </div>
-<div id="outline-container-org851feef" class="outline-3">
-<h3 id="org851feef">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org851feef">
+<div id="outline-container-org936b66f" class="outline-3">
+<h3 id="org936b66f">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org936b66f">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -101,9 +102,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org4ab98a4" class="outline-3">
-<h3 id="org4ab98a4">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org4ab98a4">
+<div id="outline-container-orgcd49773" class="outline-3">
+<h3 id="orgcd49773">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orgcd49773">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -114,9 +115,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org8f0c9c4" class="outline-3">
-<h3 id="org8f0c9c4">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org8f0c9c4">
+<div id="outline-container-org3585806" class="outline-3">
+<h3 id="org3585806">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org3585806">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
