--- a/note/dd.html
+++ b/note/dd.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,9 +70,9 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1fe95ae">SD 카드에서 이미지 덤프하기</a></li>
-<li><a href="#orgbd9ee57">이미지를 SD 카드에 쓰기</a></li>
-<li><a href="#orgd44eae2">팁</a></li>
+<li><a href="#org30bb02e">SD 카드에서 이미지 덤프하기</a></li>
+<li><a href="#org93018c5">이미지를 SD 카드에 쓰기</a></li>
+<li><a href="#org0ca3e4b">팁</a></li>
 </ul>
 </div>
 </div>
@@ -88,9 +89,9 @@ dd는 파일을 변환하거나 복사하는데 사용하는
 Disk Dump의 약자가 아닐까 유추된다.
 </p>
 
-<div id="outline-container-org1fe95ae" class="outline-2">
-<h2 id="org1fe95ae">SD 카드에서 이미지 덤프하기</h2>
-<div class="outline-text-2" id="text-org1fe95ae">
+<div id="outline-container-org30bb02e" class="outline-2">
+<h2 id="org30bb02e">SD 카드에서 이미지 덤프하기</h2>
+<div class="outline-text-2" id="text-org30bb02e">
 <p>
 주로 SD 카드의 내용을 백업할 때 사용한다.
 </p>
@@ -140,9 +141,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-orgbd9ee57" class="outline-2">
-<h2 id="orgbd9ee57">이미지를 SD 카드에 쓰기</h2>
-<div class="outline-text-2" id="text-orgbd9ee57">
+<div id="outline-container-org93018c5" class="outline-2">
+<h2 id="org93018c5">이미지를 SD 카드에 쓰기</h2>
+<div class="outline-text-2" id="text-org93018c5">
 <p>
 백업한 이미지를 이용해 SD 카드나 특정 스토리지에 동일한 내용을 복제하기 위해 사용한다.
 </p>
@@ -164,9 +165,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-orgd44eae2" class="outline-2">
-<h2 id="orgd44eae2">팁</h2>
-<div class="outline-text-2" id="text-orgd44eae2">
+<div id="outline-container-org0ca3e4b" class="outline-2">
+<h2 id="org0ca3e4b">팁</h2>
+<div class="outline-text-2" id="text-org0ca3e4b">
 <p>
 만약 덤프나 이미지 쓰기가 느리다면
 <a href="macos.html">macOS</a>에서는 <code>/dev/diskN</code> 대신 <code>/dev/rdiskN</code> 를 사용해 볼 수도 있다.
