--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -70,12 +70,12 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org69c7c80">단축키</a>
+<li><a href="#org1f1df5e">단축키</a>
 <ul>
-<li><a href="#org13b5832">프로젝트(Project)</a></li>
-<li><a href="#orgbc1a174">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#orge46d9a2">타임라인(Timeline)</a></li>
-<li><a href="#org1fb0a8f">플레이(Play or Preview)</a></li>
+<li><a href="#org1ba84bf">프로젝트(Project)</a></li>
+<li><a href="#org2af1b40">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#org0703525">타임라인(Timeline)</a></li>
+<li><a href="#org3ed39fa">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -87,13 +87,13 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-org69c7c80" class="outline-2">
-<h2 id="org69c7c80">단축키</h2>
-<div class="outline-text-2" id="text-org69c7c80">
+<div id="outline-container-org1f1df5e" class="outline-2">
+<h2 id="org1f1df5e">단축키</h2>
+<div class="outline-text-2" id="text-org1f1df5e">
 </div>
-<div id="outline-container-org13b5832" class="outline-3">
-<h3 id="org13b5832">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-org13b5832">
+<div id="outline-container-org1ba84bf" class="outline-3">
+<h3 id="org1ba84bf">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-org1ba84bf">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -102,9 +102,9 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 </dl>
 </div>
 </div>
-<div id="outline-container-orgbc1a174" class="outline-3">
-<h3 id="orgbc1a174">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-orgbc1a174">
+<div id="outline-container-org2af1b40" class="outline-3">
+<h3 id="org2af1b40">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-org2af1b40">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -119,9 +119,9 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 </dl>
 </div>
 </div>
-<div id="outline-container-orge46d9a2" class="outline-3">
-<h3 id="orge46d9a2">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-orge46d9a2">
+<div id="outline-container-org0703525" class="outline-3">
+<h3 id="org0703525">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-org0703525">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -146,9 +146,9 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 </dl>
 </div>
 </div>
-<div id="outline-container-org1fb0a8f" class="outline-3">
-<h3 id="org1fb0a8f">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-org1fb0a8f">
+<div id="outline-container-org3ed39fa" class="outline-3">
+<h3 id="org3ed39fa">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-org3ed39fa">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
