--- a/note/flake8.html
+++ b/note/flake8.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,11 +70,11 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgcfb7a56">설치</a></li>
-<li><a href="#orgbd93c45">사용법</a></li>
-<li><a href="#orge0dfccf">설정 파일</a></li>
-<li><a href="#org6bbed62">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#orgbf7f4f8">외부 링크</a></li>
+<li><a href="#org6d57e58">설치</a></li>
+<li><a href="#org3b2e957">사용법</a></li>
+<li><a href="#org8150d20">설정 파일</a></li>
+<li><a href="#org6c2be94">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#org2bae20d">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -85,9 +86,9 @@
 PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 
-<div id="outline-container-orgcfb7a56" class="outline-2">
-<h2 id="orgcfb7a56">설치</h2>
-<div class="outline-text-2" id="text-orgcfb7a56">
+<div id="outline-container-org6d57e58" class="outline-2">
+<h2 id="org6d57e58">설치</h2>
+<div class="outline-text-2" id="text-org6d57e58">
 <p>
 파이썬 패키지이기 때문에 <a href="pip.html">pip</a>로 그냥 설치할 수 있다.
 </p>
@@ -97,9 +98,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgbd93c45" class="outline-2">
-<h2 id="orgbd93c45">사용법</h2>
-<div class="outline-text-2" id="text-orgbd93c45">
+<div id="outline-container-org3b2e957" class="outline-2">
+<h2 id="org3b2e957">사용법</h2>
+<div class="outline-text-2" id="text-org3b2e957">
 <p>
 <a href="cli.html">CLI</a>로 그냥 실행시키면 된다.
 </p>
@@ -119,9 +120,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 </div>
 </div>
-<div id="outline-container-orge0dfccf" class="outline-2">
-<h2 id="orge0dfccf">설정 파일</h2>
-<div class="outline-text-2" id="text-orge0dfccf">
+<div id="outline-container-org8150d20" class="outline-2">
+<h2 id="org8150d20">설정 파일</h2>
+<div class="outline-text-2" id="text-org8150d20">
 <p>
 전역 설정 파일은 <code>~/.config/flake8</code> 파일에,
 프로젝트 단위 설정은 프로젝트 루트에 <code>.flake8</code>
@@ -153,9 +154,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-org6bbed62" class="outline-2">
-<h2 id="org6bbed62">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-org6bbed62">
+<div id="outline-container-org6c2be94" class="outline-2">
+<h2 id="org6c2be94">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-org6c2be94">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있다.
 </p>
@@ -188,9 +189,9 @@ exclude = file_to_exclude.py
 </div>
 </div>
 </div>
-<div id="outline-container-orgbf7f4f8" class="outline-2">
-<h2 id="orgbf7f4f8">외부 링크</h2>
-<div class="outline-text-2" id="text-orgbf7f4f8">
+<div id="outline-container-org2bae20d" class="outline-2">
+<h2 id="org2bae20d">외부 링크</h2>
+<div class="outline-text-2" id="text-org2bae20d">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/68">🌏파이썬 코드 문법 검사기 flake8</a>: 이 글과
 거의 동일한 내용이다.
