--- a/note/object.html
+++ b/note/object.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,16 +70,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org68f8b0d">사전적 의미</a></li>
-<li><a href="#org6999517">컴퓨터 프로그래밍 개념 1</a></li>
-<li><a href="#org5ef922a">컴퓨터 프로그래밍 개념 2</a></li>
+<li><a href="#org2716015">사전적 의미</a></li>
+<li><a href="#org92cf86c">컴퓨터 프로그래밍 개념 1</a></li>
+<li><a href="#orgc4586ed">컴퓨터 프로그래밍 개념 2</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org68f8b0d" class="outline-2">
-<h2 id="org68f8b0d">사전적 의미</h2>
-<div class="outline-text-2" id="text-org68f8b0d">
+<div id="outline-container-org2716015" class="outline-2">
+<h2 id="org2716015">사전적 의미</h2>
+<div class="outline-text-2" id="text-org2716015">
 <blockquote>
 <p>
 물건, 물체
@@ -89,9 +90,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org6999517" class="outline-2">
-<h2 id="org6999517">컴퓨터 프로그래밍 개념 1</h2>
-<div class="outline-text-2" id="text-org6999517">
+<div id="outline-container-org92cf86c" class="outline-2">
+<h2 id="org92cf86c">컴퓨터 프로그래밍 개념 1</h2>
+<div class="outline-text-2" id="text-org92cf86c">
 <p>
 오브젝트(Object, 객체)는 OOP(Object Orient Programming, 객체 지향 프로그래밍)에서
 클래스(Class)를 실체화 시킨 <a href="instance.html">인스턴스</a>를 특별히 부르는 이름이다.
@@ -102,9 +103,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org5ef922a" class="outline-2">
-<h2 id="org5ef922a">컴퓨터 프로그래밍 개념 2</h2>
-<div class="outline-text-2" id="text-org5ef922a">
+<div id="outline-container-orgc4586ed" class="outline-2">
+<h2 id="orgc4586ed">컴퓨터 프로그래밍 개념 2</h2>
+<div class="outline-text-2" id="text-orgc4586ed">
 <p>
 C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브젝트 파일이라고 부른다.
 실제로 확장자가 <code>.o</code> 이다.
