--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,7 +70,7 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org428ac91">외부 링크</a></li>
+<li><a href="#orgcae7f6d">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -87,9 +88,9 @@
 글을 참고하자.
 </p>
 
-<div id="outline-container-org428ac91" class="outline-2">
-<h2 id="org428ac91">외부 링크</h2>
-<div class="outline-text-2" id="text-org428ac91">
+<div id="outline-container-orgcae7f6d" class="outline-2">
+<h2 id="orgcae7f6d">외부 링크</h2>
+<div class="outline-text-2" id="text-orgcae7f6d">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏Org as a spreadsheet system: a short introduction</a></li>
 </ul>
@@ -112,7 +113,7 @@
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
-2020년 4월 16일 수정</div>
+2020년 4월 30일 수정</div>
 </div>
 </div>
 </div>
