--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -70,7 +70,7 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org45a2d54">외부 링크</a></li>
+<li><a href="#org7170c29">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -92,9 +92,9 @@
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-org45a2d54" class="outline-2">
-<h2 id="org45a2d54">외부 링크</h2>
-<div class="outline-text-2" id="text-org45a2d54">
+<div id="outline-container-org7170c29" class="outline-2">
+<h2 id="org7170c29">외부 링크</h2>
+<div class="outline-text-2" id="text-org7170c29">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.spacemacs.org/">🌏스페이맥스 공식 홈페이지</a></li>
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏The (Subjective) Spacemacs Howto</a>:
