--- a/note/definition.html
+++ b/note/definition.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,10 +70,10 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org92d2891">대충 사용하는 의미</a></li>
-<li><a href="#org2b4e9a3">구세대 언어의 예</a></li>
-<li><a href="#org717cbba">현대적인 언어의 예</a></li>
-<li><a href="#org6433764">결론</a></li>
+<li><a href="#org703ead2">대충 사용하는 의미</a></li>
+<li><a href="#org1810a27">구세대 언어의 예</a></li>
+<li><a href="#orge89c122">현대적인 언어의 예</a></li>
+<li><a href="#orgbfa8e7f">결론</a></li>
 </ul>
 </div>
 </div>
@@ -81,9 +82,9 @@
 IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(definition) 개념을 다룬다.
 </p>
 
-<div id="outline-container-org92d2891" class="outline-2">
-<h2 id="org92d2891">대충 사용하는 의미</h2>
-<div class="outline-text-2" id="text-org92d2891">
+<div id="outline-container-org703ead2" class="outline-2">
+<h2 id="org703ead2">대충 사용하는 의미</h2>
+<div class="outline-text-2" id="text-org703ead2">
 <blockquote>
 <p>
 정의하다 = 코딩하다
@@ -99,9 +100,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org2b4e9a3" class="outline-2">
-<h2 id="org2b4e9a3">구세대 언어의 예</h2>
-<div class="outline-text-2" id="text-org2b4e9a3">
+<div id="outline-container-org1810a27" class="outline-2">
+<h2 id="org1810a27">구세대 언어의 예</h2>
+<div class="outline-text-2" id="text-org1810a27">
 <p>
 예를 들어 C 언어의 경우 정의는 아래와 같은 식이다.
 </p>
@@ -138,9 +139,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org717cbba" class="outline-2">
-<h2 id="org717cbba">현대적인 언어의 예</h2>
-<div class="outline-text-2" id="text-org717cbba">
+<div id="outline-container-orge89c122" class="outline-2">
+<h2 id="orge89c122">현대적인 언어의 예</h2>
+<div class="outline-text-2" id="text-orge89c122">
 <p>
 예를 들어 <a href="swift.html">Swift</a>로 구조체를 정의하는 방법을 보자.
 </p>
@@ -171,9 +172,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org6433764" class="outline-2">
-<h2 id="org6433764">결론</h2>
-<div class="outline-text-2" id="text-org6433764">
+<div id="outline-container-orgbfa8e7f" class="outline-2">
+<h2 id="orgbfa8e7f">결론</h2>
+<div class="outline-text-2" id="text-orgbfa8e7f">
 <blockquote>
 <p>
 정의와 구현은 일단은 다르다.
