--- a/note/flutter.html
+++ b/note/flutter.html
@@ -70,10 +70,10 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org27656bd">문제 해결</a>
+<li><a href="#orga24b355">문제 해결</a>
 <ul>
-<li><a href="#org722a689">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#org37cb011">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#org13c58f7">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#orgfc337f2">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -89,13 +89,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-org27656bd" class="outline-2">
-<h2 id="org27656bd">문제 해결</h2>
-<div class="outline-text-2" id="text-org27656bd">
+<div id="outline-container-orga24b355" class="outline-2">
+<h2 id="orga24b355">문제 해결</h2>
+<div class="outline-text-2" id="text-orga24b355">
 </div>
-<div id="outline-container-org722a689" class="outline-3">
-<h3 id="org722a689">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-org722a689">
+<div id="outline-container-org13c58f7" class="outline-3">
+<h3 id="org13c58f7">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-org13c58f7">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -128,9 +128,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-org37cb011" class="outline-3">
-<h3 id="org37cb011">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-org37cb011">
+<div id="outline-container-orgfc337f2" class="outline-3">
+<h3 id="orgfc337f2">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-orgfc337f2">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
