--- a/note/instance.html
+++ b/note/instance.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,32 +70,32 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc234e5f">프로세스 개념</a></li>
-<li><a href="#orga31dea9">특정 서비스의 용어</a></li>
-<li><a href="#orge33aae8">컴퓨터 프로그래밍 개념</a></li>
+<li><a href="#orge8b87a4">프로세스 개념</a></li>
+<li><a href="#org1ddf776">특정 서비스의 용어</a></li>
+<li><a href="#orge06f3e5">컴퓨터 프로그래밍 개념</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgc234e5f" class="outline-2">
-<h2 id="orgc234e5f">프로세스 개념</h2>
-<div class="outline-text-2" id="text-orgc234e5f">
+<div id="outline-container-orge8b87a4" class="outline-2">
+<h2 id="orge8b87a4">프로세스 개념</h2>
+<div class="outline-text-2" id="text-orge8b87a4">
 <p>
 실행 중인 임의의 프로세스를 인스턴스라고 부르기도 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga31dea9" class="outline-2">
-<h2 id="orga31dea9">특정 서비스의 용어</h2>
-<div class="outline-text-2" id="text-orga31dea9">
+<div id="outline-container-org1ddf776" class="outline-2">
+<h2 id="org1ddf776">특정 서비스의 용어</h2>
+<div class="outline-text-2" id="text-org1ddf776">
 <p>
 예를 들어 AWS의 EC2 서비스의 경우 각각의 가상 서버를 EC2 인스턴스라고 부른다.
 </p>
 </div>
 </div>
-<div id="outline-container-orge33aae8" class="outline-2">
-<h2 id="orge33aae8">컴퓨터 프로그래밍 개념</h2>
-<div class="outline-text-2" id="text-orge33aae8">
+<div id="outline-container-orge06f3e5" class="outline-2">
+<h2 id="orge06f3e5">컴퓨터 프로그래밍 개념</h2>
+<div class="outline-text-2" id="text-orge06f3e5">
 <p>
 <a href="definition.html">정의</a>를 실체화(?) 시킨 것을 인스턴스라고 부른다.
 </p>
