--- a/note/javascript.html
+++ b/note/javascript.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,23 +70,23 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgdd32660">노트</a>
+<li><a href="#orgc16dd16">노트</a>
 <ul>
-<li><a href="#org3b78730">모듈(Module)</a></li>
-<li><a href="#org49f6e6d">스프레드(Spreads) 연산자</a></li>
-<li><a href="#orgc06c625">튜플 비슷한 문법</a></li>
+<li><a href="#org78a0559">모듈(Module)</a></li>
+<li><a href="#org134d5ec">스프레드(Spreads) 연산자</a></li>
+<li><a href="#org3bb804b">튜플 비슷한 문법</a></li>
 </ul>
 </li>
-<li><a href="#org036c8ad">실전(?) 메모</a>
+<li><a href="#org3a9a729">실전(?) 메모</a>
 <ul>
-<li><a href="#org2be471b">요소 얻기</a></li>
-<li><a href="#orgc02ee92">특정 블록에 HTML 넣기</a></li>
-<li><a href="#org1a3a8bb">콘텐츠 높이 구하기</a></li>
-<li><a href="#orgf9e7dc3">특정 태그 앞에 요소 넣기</a></li>
-<li><a href="#org5c1ebed">forEach</a></li>
+<li><a href="#orgc58cdba">요소 얻기</a></li>
+<li><a href="#org436214d">특정 블록에 HTML 넣기</a></li>
+<li><a href="#org97bdbfa">콘텐츠 높이 구하기</a></li>
+<li><a href="#orgf0bd5f7">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#org4c25525">forEach</a></li>
 </ul>
 </li>
-<li><a href="#org1156caa">외부 링크</a></li>
+<li><a href="#orga646693">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -103,13 +104,13 @@
 버전은 ES6를 기준으로 한다.
 </p>
 
-<div id="outline-container-orgdd32660" class="outline-2">
-<h2 id="orgdd32660">노트</h2>
-<div class="outline-text-2" id="text-orgdd32660">
+<div id="outline-container-orgc16dd16" class="outline-2">
+<h2 id="orgc16dd16">노트</h2>
+<div class="outline-text-2" id="text-orgc16dd16">
 </div>
-<div id="outline-container-org3b78730" class="outline-3">
-<h3 id="org3b78730">모듈(Module)</h3>
-<div class="outline-text-3" id="text-org3b78730">
+<div id="outline-container-org78a0559" class="outline-3">
+<h3 id="org78a0559">모듈(Module)</h3>
+<div class="outline-text-3" id="text-org78a0559">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰인다.
 </p>
@@ -161,9 +162,9 @@ console.log(someValues.value2);
 </div>
 </div>
 </div>
-<div id="outline-container-org49f6e6d" class="outline-3">
-<h3 id="org49f6e6d">스프레드(Spreads) 연산자</h3>
-<div class="outline-text-3" id="text-org49f6e6d">
+<div id="outline-container-org134d5ec" class="outline-3">
+<h3 id="org134d5ec">스프레드(Spreads) 연산자</h3>
+<div class="outline-text-3" id="text-org134d5ec">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며
 이름처럼 펼치거나 확산한다라는 의미로 동작한다.
@@ -226,9 +227,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc06c625" class="outline-3">
-<h3 id="orgc06c625">튜플 비슷한 문법</h3>
-<div class="outline-text-3" id="text-orgc06c625">
+<div id="outline-container-org3bb804b" class="outline-3">
+<h3 id="org3bb804b">튜플 비슷한 문법</h3>
+<div class="outline-text-3" id="text-org3bb804b">
 <div class="org-src-container">
 <pre class="src src-javascript"><span style="color: #51afef;">let</span> [<span style="color: #dcaeea;">foo</span>, <span style="color: #dcaeea;">bar</span>] = [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>]
 [foo, bar] = [bar, foo]
@@ -240,13 +241,13 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-org036c8ad" class="outline-2">
-<h2 id="org036c8ad">실전(?) 메모</h2>
-<div class="outline-text-2" id="text-org036c8ad">
+<div id="outline-container-org3a9a729" class="outline-2">
+<h2 id="org3a9a729">실전(?) 메모</h2>
+<div class="outline-text-2" id="text-org3a9a729">
 </div>
-<div id="outline-container-org2be471b" class="outline-3">
-<h3 id="org2be471b">요소 얻기</h3>
-<div class="outline-text-3" id="text-org2be471b">
+<div id="outline-container-orgc58cdba" class="outline-3">
+<h3 id="orgc58cdba">요소 얻기</h3>
+<div class="outline-text-3" id="text-orgc58cdba">
 <div class="org-src-container">
 <pre class="src src-javascript">document.getElementById(<span style="color: #98be65;">'some-id'</span>)
 document.getElementsByClassName(<span style="color: #98be65;">'some-class'</span>)[<span style="color: #da8548; font-weight: bold;">0</span>]
@@ -258,9 +259,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-orgc02ee92" class="outline-3">
-<h3 id="orgc02ee92">특정 블록에 HTML 넣기</h3>
-<div class="outline-text-3" id="text-orgc02ee92">
+<div id="outline-container-org436214d" class="outline-3">
+<h3 id="org436214d">특정 블록에 HTML 넣기</h3>
+<div class="outline-text-3" id="text-org436214d">
 <p>
 아래는 some-id라는 아이디의 div 블록 내부 내용을 지정하는 예제다.
 </p>
@@ -270,9 +271,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </div>
 </div>
 </div>
-<div id="outline-container-org1a3a8bb" class="outline-3">
-<h3 id="org1a3a8bb">콘텐츠 높이 구하기</h3>
-<div class="outline-text-3" id="text-org1a3a8bb">
+<div id="outline-container-org97bdbfa" class="outline-3">
+<h3 id="org97bdbfa">콘텐츠 높이 구하기</h3>
+<div class="outline-text-3" id="text-org97bdbfa">
 <p>
 웹 브라우저에 표시되는 내용의 높이(height)를 구하는 방법이다.
 </p>
@@ -292,9 +293,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-orgf9e7dc3" class="outline-3">
-<h3 id="orgf9e7dc3">특정 태그 앞에 요소 넣기</h3>
-<div class="outline-text-3" id="text-orgf9e7dc3">
+<div id="outline-container-orgf0bd5f7" class="outline-3">
+<h3 id="orgf0bd5f7">특정 태그 앞에 요소 넣기</h3>
+<div class="outline-text-3" id="text-orgf0bd5f7">
 <p>
 수동으로 노드를 만들어서 특정 태그 노드 앞에 붙이는 예제다.
 </p>
@@ -320,9 +321,9 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </p>
 </div>
 </div>
-<div id="outline-container-org5c1ebed" class="outline-3">
-<h3 id="org5c1ebed">forEach</h3>
-<div class="outline-text-3" id="text-org5c1ebed">
+<div id="outline-container-org4c25525" class="outline-3">
+<h3 id="org4c25525">forEach</h3>
+<div class="outline-text-3" id="text-org4c25525">
 <div class="org-src-container">
 <pre class="src src-javascript">&gt; [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>, <span style="color: #da8548; font-weight: bold;">3</span>, <span style="color: #da8548; font-weight: bold;">4</span>, <span style="color: #da8548; font-weight: bold;">5</span>].forEach((e) =&gt; console.log(e))
 <span style="color: #da8548; font-weight: bold;">1</span>
@@ -366,9 +367,9 @@ Array.from(elements).forEach((e) =&gt; { ... })
 </div>
 </div>
 </div>
-<div id="outline-container-org1156caa" class="outline-2">
-<h2 id="org1156caa">외부 링크</h2>
-<div class="outline-text-2" id="text-org1156caa">
+<div id="outline-container-orga646693" class="outline-2">
+<h2 id="orga646693">외부 링크</h2>
+<div class="outline-text-2" id="text-orga646693">
 <ul class="org-ul">
 <li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
 <li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
