--- a/note/magit.html
+++ b/note/magit.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,16 +70,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgef815fc">magit-status</a></li>
-<li><a href="#org0858943">Stage</a></li>
-<li><a href="#org2593ef8">Commit</a></li>
-<li><a href="#org556e42b">Log</a></li>
-<li><a href="#org71d2df9">Push</a></li>
-<li><a href="#org86d269b">Pull</a></li>
-<li><a href="#orgb60ce09">Branch</a></li>
-<li><a href="#org21f8570">Reset or Revert</a></li>
-<li><a href="#org5cf78b9">기타</a></li>
-<li><a href="#orgcc83960">외부 링크</a></li>
+<li><a href="#orgeecce04">magit-status</a></li>
+<li><a href="#org04603e7">Stage</a></li>
+<li><a href="#org5640339">Commit</a></li>
+<li><a href="#org42a8616">Log</a></li>
+<li><a href="#org416fe30">Push</a></li>
+<li><a href="#org366a1ef">Pull</a></li>
+<li><a href="#orgd47230d">Branch</a></li>
+<li><a href="#orgcbc3a6f">Reset or Revert</a></li>
+<li><a href="#orgfde8af5">기타</a></li>
+<li><a href="#org2186434">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -99,9 +100,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-orgef815fc" class="outline-2">
-<h2 id="orgef815fc">magit-status</h2>
-<div class="outline-text-2" id="text-orgef815fc">
+<div id="outline-container-orgeecce04" class="outline-2">
+<h2 id="orgeecce04">magit-status</h2>
+<div class="outline-text-2" id="text-orgeecce04">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -123,9 +124,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org0858943" class="outline-2">
-<h2 id="org0858943">Stage</h2>
-<div class="outline-text-2" id="text-org0858943">
+<div id="outline-container-org04603e7" class="outline-2">
+<h2 id="org04603e7">Stage</h2>
+<div class="outline-text-2" id="text-org04603e7">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -138,9 +139,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org2593ef8" class="outline-2">
-<h2 id="org2593ef8">Commit</h2>
-<div class="outline-text-2" id="text-org2593ef8">
+<div id="outline-container-org5640339" class="outline-2">
+<h2 id="org5640339">Commit</h2>
+<div class="outline-text-2" id="text-org5640339">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -156,9 +157,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org556e42b" class="outline-2">
-<h2 id="org556e42b">Log</h2>
-<div class="outline-text-2" id="text-org556e42b">
+<div id="outline-container-org42a8616" class="outline-2">
+<h2 id="org42a8616">Log</h2>
+<div class="outline-text-2" id="text-org42a8616">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -168,25 +169,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org71d2df9" class="outline-2">
-<h2 id="org71d2df9">Push</h2>
-<div class="outline-text-2" id="text-org71d2df9">
+<div id="outline-container-org416fe30" class="outline-2">
+<h2 id="org416fe30">Push</h2>
+<div class="outline-text-2" id="text-org416fe30">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org86d269b" class="outline-2">
-<h2 id="org86d269b">Pull</h2>
-<div class="outline-text-2" id="text-org86d269b">
+<div id="outline-container-org366a1ef" class="outline-2">
+<h2 id="org366a1ef">Pull</h2>
+<div class="outline-text-2" id="text-org366a1ef">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgb60ce09" class="outline-2">
-<h2 id="orgb60ce09">Branch</h2>
-<div class="outline-text-2" id="text-orgb60ce09">
+<div id="outline-container-orgd47230d" class="outline-2">
+<h2 id="orgd47230d">Branch</h2>
+<div class="outline-text-2" id="text-orgd47230d">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -194,26 +195,26 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-org21f8570" class="outline-2">
-<h2 id="org21f8570">Reset or Revert</h2>
-<div class="outline-text-2" id="text-org21f8570">
+<div id="outline-container-orgcbc3a6f" class="outline-2">
+<h2 id="orgcbc3a6f">Reset or Revert</h2>
+<div class="outline-text-2" id="text-orgcbc3a6f">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-org5cf78b9" class="outline-2">
-<h2 id="org5cf78b9">기타</h2>
-<div class="outline-text-2" id="text-org5cf78b9">
+<div id="outline-container-orgfde8af5" class="outline-2">
+<h2 id="orgfde8af5">기타</h2>
+<div class="outline-text-2" id="text-orgfde8af5">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgcc83960" class="outline-2">
-<h2 id="orgcc83960">외부 링크</h2>
-<div class="outline-text-2" id="text-orgcc83960">
+<div id="outline-container-org2186434" class="outline-2">
+<h2 id="org2186434">외부 링크</h2>
+<div class="outline-text-2" id="text-org2186434">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
