--- a/note/motion.html
+++ b/note/motion.html
@@ -70,15 +70,15 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc7ebc0a">단축키</a></li>
-<li><a href="#org1c98805">팁</a>
+<li><a href="#org4e41422">단축키</a></li>
+<li><a href="#orgd3e1d09">팁</a>
 <ul>
-<li><a href="#orga3c7b73">효과 적용 시간 보장하기</a></li>
+<li><a href="#orgf9175d0">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#org62b7cb9">기타</a>
+<li><a href="#orgc2ab2ab">기타</a>
 <ul>
-<li><a href="#orgf1534d0">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#orgdf3cf19">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
@@ -94,9 +94,9 @@
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-orgc7ebc0a" class="outline-2">
-<h2 id="orgc7ebc0a">단축키</h2>
-<div class="outline-text-2" id="text-orgc7ebc0a">
+<div id="outline-container-org4e41422" class="outline-2">
+<h2 id="org4e41422">단축키</h2>
+<div class="outline-text-2" id="text-org4e41422">
 <dl class="org-dl">
 <dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
 <dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
@@ -104,13 +104,13 @@
 </dl>
 </div>
 </div>
-<div id="outline-container-org1c98805" class="outline-2">
-<h2 id="org1c98805">팁</h2>
-<div class="outline-text-2" id="text-org1c98805">
+<div id="outline-container-orgd3e1d09" class="outline-2">
+<h2 id="orgd3e1d09">팁</h2>
+<div class="outline-text-2" id="text-orgd3e1d09">
 </div>
-<div id="outline-container-orga3c7b73" class="outline-3">
-<h3 id="orga3c7b73">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-orga3c7b73">
+<div id="outline-container-orgf9175d0" class="outline-3">
+<h3 id="orgf9175d0">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-orgf9175d0">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -128,13 +128,13 @@
 </div>
 </div>
 </div>
-<div id="outline-container-org62b7cb9" class="outline-2">
-<h2 id="org62b7cb9">기타</h2>
-<div class="outline-text-2" id="text-org62b7cb9">
+<div id="outline-container-orgc2ab2ab" class="outline-2">
+<h2 id="orgc2ab2ab">기타</h2>
+<div class="outline-text-2" id="text-orgc2ab2ab">
 </div>
-<div id="outline-container-orgf1534d0" class="outline-3">
-<h3 id="orgf1534d0">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-orgf1534d0">
+<div id="outline-container-orgdf3cf19" class="outline-3">
+<h3 id="orgdf3cf19">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-orgdf3cf19">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
