--- a/note/org-publish.html
+++ b/note/org-publish.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,7 +70,7 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org7ff7ba6">외부 링크</a></li>
+<li><a href="#orgd3cc79f">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -86,9 +87,9 @@ org-publish는 <a href="emacs.html">Emacs</a>에서
 상세한 내용은 <a target="_blank" href="https://seorenn.tistory.com/63">🌏Org Publish로 익스포트 자동화하기</a> 글을 참고하자.
 </p>
 
-<div id="outline-container-org7ff7ba6" class="outline-2">
-<h2 id="org7ff7ba6">외부 링크</h2>
-<div class="outline-text-2" id="text-org7ff7ba6">
+<div id="outline-container-orgd3cc79f" class="outline-2">
+<h2 id="orgd3cc79f">외부 링크</h2>
+<div class="outline-text-2" id="text-orgd3cc79f">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/manual/Publishing.html">🌏org-publish 공식 매뉴얼</a></li>
 </ul>
