--- a/note/special-char-name.html
+++ b/note/special-char-name.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -162,9 +163,9 @@
 </tbody>
 </table>
 
-<div id="outline-container-orgc1947a4" class="outline-2">
-<h2 id="orgc1947a4">참고</h2>
-<div class="outline-text-2" id="text-orgc1947a4">
+<div id="outline-container-org0581c1d" class="outline-2">
+<h2 id="org0581c1d">참고</h2>
+<div class="outline-text-2" id="text-org0581c1d">
 <ul class="org-ul">
 <li>Apostrophe와 작은 따옴표는 원래 용도가 다르다.
 키보드에서 같은 키로 입력하기 때문에 이렇게 적었을 뿐이니 오해하지 말자.</li>
